--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -11,4 +11,10 @@
 }
 .screen-header__icons span {
   margin-left: 25px;
+  position: relative;
+}
+.screen-header__notipoint {
+  position: absolute;
+  top: -25px;
+  left: -2px;
 }
