--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -93,25 +93,27 @@
 }
 .reply .reply__column:last-child {
   width: 90%;
+  position: relative;
 }
 .reply i {
   opacity: 0.5;
 }
 .reply input {
-  padding: 10px;
+  padding: 12px;
   width: 100%;
   border: var(--main-border);
-  border-radius: 20px;
+  border-radius: 25px;
+  box-sizing: border-box;
 }
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: 7px;
-  top: 8px;
+  right: 5px;
+  top: 5px;
 }
 .reply__column:last-child > i {
-  right: 47px;
-  top: 15px;
+  right: 45px;
+  top: 13px;
   font-size: 25px;
 }
 .reply__column button {
